me = User.objects.filter(username="Mark").first()
UserApplication.create_cobalt_rbac_mapping(member=me, model_name="Forum", model_id=1, role="a.b.c")